; ModuleID = '/home/carl/AnghaBench/linux/tools/testing/selftests/kvm/x86_64/extr_vmx_set_nested_state_test.c_set_default_vmx_state.c'
source_filename = "/home/carl/AnghaBench/linux/tools/testing/selftests/kvm/x86_64/extr_vmx_set_nested_state_test.c_set_default_vmx_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm_nested_state = type { i32, i32, %struct.TYPE_6__, i64 }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32, i32, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64 }

@KVM_STATE_NESTED_GUEST_MODE = common dso_local global i32 0, align 4
@KVM_STATE_NESTED_RUN_PENDING = common dso_local global i32 0, align 4
@have_evmcs = common dso_local global i64 0, align 8
@KVM_STATE_NESTED_EVMCS = common dso_local global i32 0, align 4
@VMCS12_REVISION = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @set_default_vmx_state(%struct.kvm_nested_state* %0, i32 %1) #0 {
  %3 = alloca %struct.kvm_nested_state*, align 8
  %4 = alloca i32, align 4
  store %struct.kvm_nested_state* %0, %struct.kvm_nested_state** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.kvm_nested_state*, %struct.kvm_nested_state** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @memset(%struct.kvm_nested_state* %5, i32 0, i32 %6)
  %8 = load i32, i32* @KVM_STATE_NESTED_GUEST_MODE, align 4
  %9 = load i32, i32* @KVM_STATE_NESTED_RUN_PENDING, align 4
  %10 = or i32 %8, %9
  %11 = load %struct.kvm_nested_state*, %struct.kvm_nested_state** %3, align 8
  %12 = getelementptr inbounds %struct.kvm_nested_state, %struct.kvm_nested_state* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 8
  %13 = load i64, i64* @have_evmcs, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %21

15:                                               ; preds = %2
  %16 = load i32, i32* @KVM_STATE_NESTED_EVMCS, align 4
  %17 = load %struct.kvm_nested_state*, %struct.kvm_nested_state** %3, align 8
  %18 = getelementptr inbounds %struct.kvm_nested_state, %struct.kvm_nested_state* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = or i32 %19, %16
  store i32 %20, i32* %18, align 8
  br label %21

21:                                               ; preds = %15, %2
  %22 = load %struct.kvm_nested_state*, %struct.kvm_nested_state** %3, align 8
  %23 = getelementptr inbounds %struct.kvm_nested_state, %struct.kvm_nested_state* %22, i32 0, i32 3
  store i64 0, i64* %23, align 8
  %24 = load i32, i32* %4, align 4
  %25 = load %struct.kvm_nested_state*, %struct.kvm_nested_state** %3, align 8
  %26 = getelementptr inbounds %struct.kvm_nested_state, %struct.kvm_nested_state* %25, i32 0, i32 1
  store i32 %24, i32* %26, align 4
  %27 = load %struct.kvm_nested_state*, %struct.kvm_nested_state** %3, align 8
  %28 = getelementptr inbounds %struct.kvm_nested_state, %struct.kvm_nested_state* %27, i32 0, i32 2
  %29 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %28, i32 0, i32 0
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 0
  store i32 4096, i32* %30, align 8
  %31 = load %struct.kvm_nested_state*, %struct.kvm_nested_state** %3, align 8
  %32 = getelementptr inbounds %struct.kvm_nested_state, %struct.kvm_nested_state* %31, i32 0, i32 2
  %33 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %32, i32 0, i32 0
  %34 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %33, i32 0, i32 1
  store i32 8192, i32* %34, align 4
  %35 = load %struct.kvm_nested_state*, %struct.kvm_nested_state** %3, align 8
  %36 = getelementptr inbounds %struct.kvm_nested_state, %struct.kvm_nested_state* %35, i32 0, i32 2
  %37 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %36, i32 0, i32 0
  %38 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %37, i32 0, i32 2
  %39 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %38, i32 0, i32 0
  store i64 0, i64* %39, align 8
  %40 = load %struct.kvm_nested_state*, %struct.kvm_nested_state** %3, align 8
  %41 = load i32, i32* @VMCS12_REVISION, align 4
  %42 = call i32 @set_revision_id_for_vmcs12(%struct.kvm_nested_state* %40, i32 %41)
  ret void
}

declare dso_local i32 @memset(%struct.kvm_nested_state*, i32, i32) #1

declare dso_local i32 @set_revision_id_for_vmcs12(%struct.kvm_nested_state*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
